[java] fix Java 9 warnings and 'code too large' errors